refactor: Apply default theme when no theme is given

--- a/templates/simple/Sherwood.toml.liquid
+++ b/templates/simple/Sherwood.toml.liquid
@@ -1,6 +1,6 @@
 [site]
 title = "{{ site_title }}"
-theme = "default"
+# theme = "default"
 
-[templates]
-page_template = "default.stpl"
+# [templates]
+# page_template = "default.stpl"
