chore: Add necessary settings to simple template

--- a/templates/simple/Cargo.toml.liquid
+++ b/templates/simple/Cargo.toml.liquid
@@ -17,3 +17,5 @@ path = "src/main.rs"
 [dependencies]
 sherwood = "0.3.0"
 tokio = { version = "1.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+sailfish = "0.8"
