--- a/templates/simple/Sherwood.toml.liquid
+++ b/templates/simple/Sherwood.toml.liquid
@@ -1,6 +1,22 @@
 [site]
 title = "{{ site_title }}"
-# theme = "default"
 
 # [templates]
 # page_template = "default.stpl"
+
+# [css]
+# entry_point = "main.css"
+# minify = true
+# source_maps = false
+# remove_unused = false
+# nesting = true
+
+# [css.targets]
+# chrome = "103"
+# firefox = "115"
+# safari = "15"
+# edge = "127"
+
+[breadcrumb]
+max_items = 5
+enabled = true
