feat: Add site title and site copyright to Sherwood config

--- a/templates/simple/Sherwood.toml.liquid
+++ b/templates/simple/Sherwood.toml.liquid
@@ -1,6 +1,10 @@
 [site]
 title = "{{ site_title }}"
 
+[site]
+title = "{{ site_title }}" # (required)
+footer_text = "© {{ site_title }}" # (optional)
+
 # [templates]
 # page_template = "default.stpl"
 
